<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.statistics.StatisticsGenderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:weightSum="10">

        <com.ttp.usermanagement.common.custom.font.TextViewPoppinsSemiBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/no"
            android:textSize="15sp" />

        <com.ttp.usermanagement.common.custom.font.TextViewPoppinsSemiBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|start"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/role"
            android:textSize="15sp" />

        <com.ttp.usermanagement.common.custom.font.TextViewPoppinsSemiBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="3dp"
            android:text="@string/gender_male"
            android:textSize="15sp" />

        <com.ttp.usermanagement.common.custom.font.TextViewPoppinsSemiBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:text="@string/gender_female"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_stt_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:paddingHorizontal="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>