<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            tools:context=".ui.login.LoginActivity">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_userId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ed_userId"
                android:hint="@string/pass"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/blue"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_family_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ed_pass"
                android:hint="@string/family_name"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ed_family_name"
                android:hint="@string/name"
                app:boxStrokeColor="@color/blue"
                app:errorEnabled="true"
                app:hintTextColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/ll_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ed_first_name"
                android:orientation="horizontal"
                android:weightSum="9">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_age"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/age"
                    app:boxStrokeColor="@color/blue"
                    app:errorEnabled="true"
                    app:hintTextColor="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:paddingHorizontal="7dp"
                    android:text="@string/is_admin"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_is_admin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                android:id="@+id/tt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_age"
                android:paddingHorizontal="3dp"
                android:text="@string/gender"
                android:textSize="18sp" />

            <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                android:id="@+id/tv_err_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spn_gender"
                android:layout_below="@+id/ll_age"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/tt_gender"
                android:gravity="center"
                android:paddingHorizontal="3dp"
                android:text="@string/emty_gender"
                android:textColor="@color/red_FF444C"
                android:textSize="14sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spn_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tt_gender"
                android:padding="5dp" />

            <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                android:id="@+id/tt_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spn_gender"
                android:paddingHorizontal="3dp"
                android:text="@string/role"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spn_role"
                style="@style/Widget.AppCompat.Spinner.DropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tt_role"
                android:padding="5dp" />

            <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spn_role"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_btn_blue"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>
    </ScrollView>

</layout>
