<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="@dimen/activity_horizontal_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp">

            <com.ttp.usermanagement.common.custom.font.TextViewPoppinsSemiBold
                android:id="@+id/tv_title_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/re_login"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title_dialog"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:paddingHorizontal="5dp"
                android:weightSum="2">

                <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                    android:id="@+id/btn_success"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_blue"
                    android:gravity="center"
                    android:paddingVertical="6dp"
                    android:text="@string/success"
                    android:textColor="@color/gray_medium"
                    android:textSize="20sp" />

                <com.ttp.usermanagement.common.custom.font.TextViewPoppinsMedium
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn"
                    android:gravity="center"
                    android:paddingVertical="6dp"
                    android:text="@string/cancel"
                    android:textColor="@color/gray_medium"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>


